# DAoSS

./: .gitignore  .gitmodules  App.tsx  DAOSS.sln  Db image.sql  GIT_SETUP.md  MIGRATION_COMPLETE.md  MIGRATION_PROGRESS.md  PARSER_API_TESTING.md  README.md  REFACTORING.md  SETUP.md  Some explanations.md  TEST_REQUEST.ps1  Tests Documentation Matthew.md  index.html  package-lock.json  package.json  presentation.md  setup-submodules.ps1  six.md  start-all.ps1  styles.css  Отчет_по_тестам_фронтенда.docx
FlowchartEditorClient/: ANDROID_SETUP.md  DESIGN_SYSTEM.md  INSTRUCTIONS.md  README.md  settings.gradle
FlowchartEditorClient/app/: build.gradle
FlowchartEditorClient/gradle/: libs.versions.toml
backend/parser/: CMakeLists.txt  Lexer.h  Parser.h  Postfix.h  Token.h  config.json.example  index.html  main.cpp
backend/parser/Ast/: Ast.h  Expr.h  ExprAcceptImpl.h  Stmt.h  Visitor.h
backend/parser/Auth/: JwtValidator.h
backend/parser/CPPAst/: CppAst.h  CppAstFw.h  CppDecl.h  CppExpr.h  CppExprAcceptImpl.h  CppStmt.h  CppVisitor.h
backend/parser/CodeGen/: CCodeGenerator.h  CppCodeGenerator.h  PascalCodeGenerator.h
backend/parser/Expression/: CaseOf.h  ConditionExpression.h  Expression.h  Function.h  FunctionExecutor.h  Procedure.h  StatementExpression.h
backend/parser/Flowchart/: ExporterJson.h  FromExpressions.h
backend/parser/Parser/: ASTParserToJSON.h  AstVisualizer.h  CParserToAST.h  CppASTParserToJSON.h  CppAstVisualizer.h  CppParserToAST.h  ErrorCollector.h  PascalParserToExpression.h
backend/parser/Scripts/: HierarchyList.h  Lexer.h  Postfix.h  SearchTreeTable.h  Stack.h  Token.h  json.hpp
backend/parser/tests/: PascalSyntaxTests.cpp  README.md  TestFramework.h  Документация_тестов_Pascal.docx
docs/: functional-specification.md
examples/: c.txt  flowchart.json  flowchart2.json  pascal.txt  script.js
public/: app.js
src/: App.css  App.tsx  Directory.Build.props  index.css  index.ts
src/Application/: DAOSS.Application.csproj
src/Infrastructure/: DAOSS.Infrastructure.csproj  DependencyInjection.cs  README.md
src/WebApi/: DAOSS.WebApi.csproj  Program.cs  README.md  appsettings.Development.json  appsettings.json
src/components/: FlowchartEditor.css  FlowchartEditor.tsx  FlowchartEditorRefactored.tsx  HomePage.css  HomePage.tsx  LoginPage.css  LoginPage.tsx  UserPanel.css  UserPanel.tsx
src/converters/: flowchartToJSON.ts  index.ts
src/handlers/: canvasHandlers.ts  connectionHandlers.ts  index.ts  nodeHandlers.ts
src/hooks/: index.ts  useFlowchartGenerator.ts  useFlowchartParser.ts  useFlowchartStore.ts
src/pages/: InvitationsPage.css  InvitationsPage.tsx  ProfilePage.css  ProfilePage.tsx  ProjectCreatePage.css  ProjectCreatePage.tsx  ProjectDetailsPage.css  ProjectDetailsPage.tsx  ProjectsListPage.css  ProjectsListPage.tsx
src/parsers/: cParser.ts  expressionConverter.ts  fallbackParser.ts  index.ts  parserUtils.ts  pascalParser.ts
src/rendering/: connectionRenderer.ts  index.ts  (+2 more)
(+256 files in other folders)
